<resources>
    <string name="app_name">ZhiDaEducation</string>


    <!--底栏图标文字说明-->
    <string name="icon_text_home">首页</string>
    <string name="icon_text_course">课程</string>
    <string name="icon_text_notice">消息</string>
    <string name="icon_text_community">社区</string>
    <string name="icon_text_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
